--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import HeaderButton from "./HeaderButton.astro";
           <HeaderButton href="/">Inicio</HeaderButton>
         </div>
         <div class="relative group">
-          <HeaderButton href="/especialidades/especialidades">Programa y Servicios</HeaderButton>
+          <HeaderButton href="/especialidades/especialidades">Programas y Servicios</HeaderButton>
         </div>
         <div class="relative group">
           <HeaderButton href="/atencion/opciones">¿Necesitas atención?</HeaderButton>
