--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,36 +1,25 @@
 ---
 import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro'
-import '../styles/global.css'
+import Header from '../components/Header.astro';
+import '../styles/global.css';
 
-const { title } = Astro.props
-import { ClientRouter } from 'astro:transitions';
+const { title } = Astro.props;
+
 ---
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<ClientRouter/>
-	</head>
-	<body>
-		<Header/>
-		<main>
-			<slot />
-		</main>
-		<Footer/>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
