--- a/src/pages/reserva.astro
+++ b/src/pages/reserva.astro
@@ -29,11 +29,18 @@ import Layout from "../layouts/Layout.astro";
                     </div>
                     
                     <div class="flex justify-center">
-                        <div class="bg-[#2c0a71] w-fit">
-                            <input type="submit" class="py-3 px-8 rounded outline-1" value="Revisar">
-                        </div>
+                            <input type="submit" class="py-3 px-8 outline rounded outline-2 bg-[#2c0a71]" value="Revisar">
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <div class="flex justify-center text-white pt-4">
+            <div class="bg-[#200934] w-[90%] text-center py-4 rounded">
+                <div class="flex justify-around">
+                    <button class="py-3 px-8 outline rounded outline-2 bg-[#2c0a71]">Por hora</button>
+                    <button class="py-3 px-8 outline rounded outline-2 bg-[#2c0a71]">Por doctor</button>
+                </div>
             </div>
         </div>
     </div>
