--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,33 +2,28 @@
 import HeaderButton from "./HeaderButton.astro";
 ---
 
-<header class="w-full bg-white text-black mt-[20px] shadow-2xl rounded">
-  <div class="relative">
-    <div class="flex items-center justify-between px-6 md:px-8 py-3">
-      <nav class="hidden md:flex gap-6 font-semibold">
-        <a href="/" class="shrink-0">
-          <img src="/logo.png" alt="Logo" class="h-12" />
-        </a>
-        <div class="relative group">
-          <HeaderButton href="/">Inicio</HeaderButton>
-        </div>
-        <div class="relative group">
-          <HeaderButton href="/programayservicio">Programa y Servicios</HeaderButton>
-        </div>
-        <div class="relative group">
-          <HeaderButton href="/atencion/opciones">¿Necesitas atención?</HeaderButton>
-        </div>
-        <div class="relative group">
-          <HeaderButton href="/informate">OIRS</HeaderButton>
-        </div>
-        <div class="relative group">
-          <HeaderButton href="/about">Quienes Somos</HeaderButton>
-        </div>
+<header class="w-full shadow-2xl overflow-hidden">
+  <div class="w-full">
+    <img src="header2.png" alt="Foto del hospital" class="object-cover h-[11rem] w-full" />
+  </div>
+
+  <div class="relative bg-[#200934] text-white">
+    <div class="flex justify-between px-6 md:px-10 py-3">
+      <a href="/" class="shrink-0">
+        <img src="/logo.png" alt="Logo" class="h-12" />
+      </a>
+
+      <nav class="hidden md:flex flex-1 justify-start gap-6 font-semibold">
+        <HeaderButton href="/">Inicio</HeaderButton>
+        <HeaderButton href="/programayservicio">Programa y Servicios</HeaderButton>
+        <HeaderButton href="/atencion/opciones">¿Necesitas atención?</HeaderButton>
+        <HeaderButton href="/informate">OIRS</HeaderButton>
+        <HeaderButton href="/about">Quienes Somos</HeaderButton>
       </nav>
 
-      <nav class="ml-auto hidden md:flex gap-3 font-semibold">
-        <a href="/reserva" class="px-3 py-1 bg-white text-black rounded hover:bg-gray-300">Reserva tu Hora</a>
-        <a href="/miclinica" class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600">Iniciar Sesion</a>
+      <nav class="hidden md:flex gap-3 font-semibold">
+        <HeaderButton href="/reserva">Reserva tu Hora</HeaderButton>
+        <HeaderButton href="/miclinica">Iniciar Sesión</HeaderButton>
       </nav>
 
       <label for="mobile-toggle" class="md:hidden cursor-pointer p-2">
@@ -37,20 +32,19 @@ import HeaderButton from "./HeaderButton.astro";
     </div>
 
     <input id="mobile-toggle" type="checkbox" class="peer hidden" />
-    <div class="md:hidden bg-gray-300 text-black max-h-0 overflow-hidden transition-all duration-300 peer-checked:max-h-[32rem] shadow-inner">
-      <nav class="flex flex-col gap-2 px-4 pb-4 font-semibold">
-        <a href="/" class="py-2 border-b border-white/20">Inicio</a>
-        <a href="/programayservicio" class="py-2 border-b border-white/20">Programa y Servicios</a>
-        <a href="/atencion/opciones" class="py-2 border-b border-white/20">¿Necesitas atención?</a>
-        <a href="/informate" class="py-2 border-b border-white/20">OIRS</a>
-        <a href="/about" class="py-2 border-b border-white/20">Quienes Somos</a>
+    <div class="md:hidden bg-[#200934] max-h-0 overflow-hidden transition-all duration-300 peer-checked:max-h-[35rem]">
+      <nav class="flex flex-col gap-2 px-4 pb-6 font-semibold">
+        <HeaderButton href="/" class="py-2 border-b ">Inicio</HeaderButton>
+        <HeaderButton href="/programayservicio" class="py-2 border-b ">Programa y Servicios</HeaderButton>
+        <HeaderButton href="/atencion/opciones" class="py-2 border-b ">¿Necesitas atención?</HeaderButton>
+        <HeaderButton href="/informate" class="py-2 border-b">OIRS</HeaderButton>
+        <HeaderButton href="/about" class="py-2 border-b ">Quienes Somos</HeaderButton>
 
-        <div class="mt-3 border-t border-white/30 pt-3 grid grid-cols-1 gap-2">
-          <a href="/reserva" class="px-3 py-1 bg-gray-300 text-black rounded hover:bg-gray-500">Reserva de Hora</a>
-          <a href="/miclinica" class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600">Mi Clínica </a>
+        <div class="mt-4 border-t pt-4 flex flex-col gap-3">
+          <HeaderButton href="/reserva" class="px-3 py-2 rounded-lg font-bold text-center">Reserva de Hora</HeaderButton>
+          <HeaderButton href="/miclinica" class="px-3 py-2 rounded-lg font-bold text-center">Mi Clínica</HeaderButton>
         </div>
       </nav>
     </div>
   </div>
 </header>
-
