--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,22 +1,20 @@
 ---
-
 ---
 <footer>
-    <div class="grid grid-cols-3 bg-[#200934] text-white p-4 h-96 w-full" >
+    <div class="grid grid-cols-1 md:grid-cols-3 bg-[#200934] text-white p-4 w-full gap-8 md:h-96">
 
-        <div class="flex flex-col">
-            <h2 class="text-3xl flex justify-center">CONTACTO</h2>
-            <p class="items-start pt-7">Direccion: Acceso 1 2-98, Paine, Region Metropolitana</p>
-            <p class="items-start">Telefono: 9 7208 4570</p>
-
+        <div class="flex flex-col items-center justify-cente">
+            <h2 class="text-3xl mb-4 text-center md:text-left">CONTACTO</h2>
+            <p class="pt-2 md:pt-7 text-center md:text-left">Dirección: Acceso 1 2-98, Paine, Región Metropolitana</p>
+            <p class="text-center md:text-left">Teléfono: 9 7208 4570</p>
         </div>
-        <div class="flex-col  items-center flex">
-            <p class="text-3xl ">DONDE ESTAMOS</p>
-            <img src="/maps.png" alt="maps" class="h-[20rem] w-[30rem] pt-7"/>
+        <div class="flex flex-col items-center justify-center">
+            <p class="text-3xl mb-4 text-center">DONDE ESTAMOS</p>
+            <img src="/maps.png" alt="maps" class="h-60 w-80 md:h-[20rem] md:w-[30rem] pt-4 md:pt-7 object-cover rounded-md"/>
         </div>
-        <div class="flex-col items-center flex">
-            <p class="text-3xl flex justify-center">VACUNACION</p>
-            <img src="/index/4.png" alt="vacunate" class="h-[20rem] w-[20rem] pt-7"/>
+        <div class="flex flex-col items-center justify-center">
+            <p class="text-3xl mb-4 text-center">VACUNACION</p>
+            <img src="/index/4.png" alt="vacunate" class="h-60 w-60 md:h-[20rem] md:w-[20rem] pt-4 md:pt-7 object-cover rounded-md"/>
         </div>
     </div>
 </footer>
