--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <footer>
-    <div class="grid grid-cols-1 md:grid-cols-3 bg-[#200934] text-white p-4 w-full gap-8 md:h-96">
+    <div class="grid grid-cols-1 md:grid-cols-3 bg-[#200934] text-white w-full pb-5 gap-8 md:h-96">
 
         <div class="flex flex-col items-center justify-cente">
             <h2 class="text-3xl mb-4 text-center md:text-left">CONTACTO</h2>
