--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ import HeaderButton from "./HeaderButton.astro";
           <div class="py-1">
         <a href="/about" class="block px-4 py-2 text-sm text-gray-300 hover:bg-white/5 hover:text-white focus:bg-white/5 focus:text-white">Quienes Somos</a>
         <a href="/misionvision" class="block px-4 py-2 text-sm text-gray-300 hover:bg-white/5 hover:text-white focus:bg-white/5 focus:text-white">Misión y Visión</a>
-        <a href="/horarios" class="block px-4 py-2 text-sm text-gray-300 hover:bg-white/5 hover:text-white focus:bg-white/5 focus:text-white">Horarios</a>
+        <a href="/horario" class="block px-4 py-2 text-sm text-gray-300 hover:bg-white/5 hover:text-white focus:bg-white/5 focus:text-white">Horarios</a>
           </div>
         </el-menu>
       </el-dropdown>
