Cambios html semantico

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,21 +3,21 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <div>
+    <header>
         <img src="about/hospital.webp" alt="Foto del hospital" class="object-fill h-[42rem] w-full">
         
         <div class="absolute top-[35%] w-full text-5xl flex justify-center">
-            <div class="bg-black/30 w-fit rounded">
+            <div class="bg-black/70 w-fit rounded">
                 <h1 class="text-white ">Quiénes somos</h1>
             </div>
         </div>
-    </div>
+    </header>
 
     <div class="w-full flex justify-center pb-4">
         <div class="w-[95%] bg-[#eee] rounded flex justify-center">
             <div class="w-[95%]">
                 <div class="md:flex gap-4 lg:py-5">
-                    <div class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
+                    <section class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
                         <div class="underline pb-2">
                             <h2 class="text-3xl">Nuestra misión</h2>
                         </div>
@@ -26,10 +26,10 @@ import Layout from "../layouts/Layout.astro";
                                 Somos un Centro de Atención Primaria de Salud docente-asistencial, comprometido con la promoción, prevención, tratamiento y rehabilitación de las familias de la comuna de Paine, operando bajo los principios del Modelo de Salud Familiar, de calidad y seguridad del paciente. Contamos con equipos calificados, profundamente vinculados y sensibles a las necesidades de nuestra comunidad.
                             </p>
                         </div> 
-                    </div>
+                    </section>
 
 
-                    <div class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
+                    <section class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
                         <div class="underline pb-2">
                             <h2 class="text-3xl">Nuestra visión</h2>
                         </div>
@@ -38,12 +38,12 @@ import Layout from "../layouts/Layout.astro";
                                 Aspiramos a ser una institución de salud que ofrece atención de excelencia y calidad, centrada en el enfoque biopsicosocial y familiar. Buscamos promover la salud y acompañar a las personas, familias y comunidad para mejorar su calidad de vida, contando con instalaciones adecuadas, equipamiento óptimo y profesionales con competencias técnicas y humanas.
                             </p>
                         </div> 
-                    </div>
+                    </section>
                 </div>
 
 
                 <div class="md:flex gap-4">
-                    <div class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
+                    <section class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
                         <div class="underline pb-2">
                             <h2 class="text-3xl">Trayectoria e infraestructura</h2>
                         </div>
@@ -55,10 +55,10 @@ import Layout from "../layouts/Layout.astro";
                                 Con una infraestructura de más de 2.400 m² y capacidad para atender a cerca de 30.000 usuarios inscritos, el CESFAM cuenta con modernos sectores diferenciados (Azul, Verde y Rojo), 21 box de atención, boxes especializados en Urgencia, Ecografía, Curaciones, Cirugía menor, IRA, ERA, además de salas multiuso, odontológicas, de rehabilitación, estimulación temprana, toma de muestra, esterilización, farmacia, leche, esterilización, bodegas, cafetería y baños diferenciados.
                             </p>
                         </div> 
-                    </div>
+                    </section>
 
 
-                    <div class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
+                    <section class="bg-[#d1d1d1] my-2 py-1 rounded px-2 md:w-[50%]">
                         <div class="underline pb-2">
                             <h2 class="text-3xl">Innovación y enfoque comunitario</h2>
                         </div>
@@ -70,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
                                 Además, en agosto de 2022 inauguramos una moderna Sala de Rehabilitación Infantil, equipada para atender a niños de 0 a 19 años con discapacidad o lesiones traumatológicas, fortaleciendo nuestro compromiso con la rehabilitación desde etapas tempranas.
                             </p>
                         </div> 
-                    </div>
+                    </section>
                 </div>
             </div>
         </div>
