--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import HeaderButton from "./HeaderButton.astro";
 ---
 <header class="w-full shadow-2xl overflow-hidden relative">
   <div class="w-full relative">
-    <img src="header2.png" alt="Foto del hospital" class="object-cover h-[11rem] w-full title" />
+    <img src="/header2.png" alt="Foto del hospital" class="object-cover h-[11rem] w-full title" />
     <h4 class="absolute inset-0 flex items-center justify-center text-lg md:text-3xl font-bold text-white bg-black bg-opacity-40 px-2 text-center">
       CESFAM DR MIGUEL SOLAR DE PAINE
     </h4>
@@ -44,7 +44,7 @@ import HeaderButton from "./HeaderButton.astro";
       </nav>
 
       <nav class="hidden md:flex gap-3 font-semibold">
-        <HeaderButton href="/reserva">Reserva tu Hora</HeaderButton>
+        <HeaderButton href="/reserva/reserva">Reserva tu Hora</HeaderButton>
         <HeaderButton href="/miclinica">Iniciar Sesión</HeaderButton>
       </nav>
 
