Correcion del calendario

--- a/src/pages/reserva/reserva.astro
+++ b/src/pages/reserva/reserva.astro
@@ -45,7 +45,7 @@ import Layout from "../../layouts/Layout.astro";
                     <button class="py-3 px-8 outline rounded outline-2 bg-[#2c0a71]">Por hora</button>
                     <button class="py-3 px-8 outline rounded outline-2 bg-[#2c0a71]">Por doctor</button>
                 </div>
-                <Calendar/>
+                <Calendar client:load/>
             </div>
         </div>
     </div>
