Fix typos and improve text clarity in multiple components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -99,7 +99,7 @@ const ctaLinks = [
       </nav>
 
       <label for="mobile-toggle" class="md:hidden cursor-pointer p-2">
-        <img src="/menu.png" alt="Abrir men&uacute;" class="h-7 w-7" />
+        <img src="/menu.png" alt="Abrir menú" class="h-7 w-7" />
       </label>
     </div>
 
