--- a/src/pages/reserva/reserva.astro
+++ b/src/pages/reserva/reserva.astro
@@ -33,7 +33,7 @@ const title = "Reserva de hora";
                         
                         <div class="py-8">
                             <div class="pb-4">
-                                <label for="verificador">Ingresa tu d&iacute;gito verificador</label>
+                                <label for="verificador">Ingresa tu dígito verificador</label>
                             </div>
                             <input id="verificador" type="text" placeholder="K" class="outline-1 rounded text-black px-3 py-2">
                         </div>
