--- a/src/pages/programas/rehabilitacion.astro
+++ b/src/pages/programas/rehabilitacion.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../../layouts/Layout.astro";
 ---
 <Layout>
   <main class="max-w-5xl mx-auto px-4 md:px-8 py-10 space-y-10">
