--- a/src/pages/servicios/tomamuestras.astro
+++ b/src/pages/servicios/tomamuestras.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../../layouts/Layout.astro";
 ---
 <Layout>
   <main class="max-w-6xl mx-auto px-4 md:px-8 py-10">
